More Fixing Sun/Moon Toggle Button Spacing

--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -96,7 +96,7 @@
   margin-left: 20px;
   cursor: pointer;
   font-size: 20px;
-  flex-grow: 1;
+  flex-grow: 70;
   display: flex;
 }
 
